Added libstm32f1hal submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "firmware/lib/libinfinikeys"]
 	path = firmware/lib/libinfinikeys
 	url = https://github.com/berndoJ/libinfinikeys
+[submodule "firmware/lib/libstm32f1hal"]
+	path = firmware/lib/libstm32f1hal
+	url = https://github.com/berndoJ/libstm32f1hal
